fix footer spacing

--- a/CSS-FILES/footer.css
+++ b/CSS-FILES/footer.css
@@ -8,19 +8,20 @@
 .footer-content {
     display: flex;
     background-color: #e7d7e3;
-    padding: 2rem 0;
+    padding: 1.5rem 0;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 
 .footer-section {
     flex: 1;
-    margin: 0.6rem;
+    margin: 1rem;
     min-width: 12.5rem;
 }
 
 .footer-section h2 {
     margin-bottom: 0.6rem;
+    font-weight: 700;
 }
 
 .footer-section p, .footer-section a {
@@ -32,8 +33,9 @@
 }
 
 .footer-bottom {
-    margin-top: 0.5rem;
+    background-color: #f5f1e9;
+    padding-top: 0.5rem;
     font-size: 0.9rem;
     text-align: center;
-    margin-bottom: 0.5rem;
+    padding-bottom: 0.5rem;
 }
